adicionado o arquivo html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2>Esportes</h2>
             <div class="articles">
                 <article>
-                    <img src="Pictures/futebol.jpg" alt="Bola de futebol no gramado" />
+                    <img src="imagens/futebol.jpg" alt="Bola de futebol no gramado" />
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
@@ -44,7 +44,7 @@
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
-                    <img src="Pictures/futebol-americano.jpg" alt="Jogador de futebol americano correndo com a bola na mão" />
+                    <img src="imagens/futebol-americano.jpg" alt="Jogador de futebol americano correndo com a bola na mão" />
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
@@ -55,7 +55,7 @@
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
-                    <img src="Pictures/basquete.jpg" title="Vista aérea de uma quadra de basquete" />
+                    <img src="imagens/basquete.jpg" title="Vista aérea de uma quadra de basquete" />
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
@@ -73,7 +73,7 @@
             <h2>Economia</h2>
             <div class="articles">
                 <article>
-                    <img src="Pictures/dolares.jpg" alt="Muitos dólares" />
+                    <img src="imagens/dolares.jpg" alt="Muitos dólares" />
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
@@ -84,7 +84,7 @@
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
-                    <img src="Pictures/euro.jpg" alt="Várias notas de euro" />
+                    <img src="imagens/euro.jpg" alt="Várias notas de euro" />
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
@@ -95,7 +95,7 @@
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
-                    <img src="Pictures/petroleo.jpg" alt="Extração de petróleo" />
+                    <img src="imagens/petroleo.jpg" alt="Extração de petróleo" />
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
@@ -113,7 +113,7 @@
             <h2>Moda e beleza</h2>
             <div class="articles">
                 <article>
-                    <img src="Downloads/image.jpg.png" alt="modelos desfilando na passarela">
+                    <img src="imagens/nyfw.jpg.webp" alt="modelos desfilando na passarela">
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
@@ -124,18 +124,18 @@
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
-                    <img src="Downloads/collection-of-compact-powder-in-different-shades.jpg" alt="pó compacto em tons naturais">
+                    <img src="imagens/make.jpeg" alt="pó compacto em tons naturais">
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
-                    <h3>Beleza natural</h3>
+                    <h3>Beleza glow</h3>
                     <p>
                         A tendência de maquiagem para a próxima estação.
                     </p>
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
-                    <img src="Downloads/images-2.jpeg" alt="Naomi Campbell">
+                    <img src="imagens/naomi.webp" alt="Naomi Campbell">
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
@@ -153,7 +153,7 @@
             <h2>Tecnologia</h2>
             <div class="articles">
                 <article>
-                    <img src="Downloads/images.jpeg" alt="iphone 16 em todas as cores">
+                    <img src="imagens/iphone.webp" alt="iphone 16 em todas as cores">
                     <header>
                         <time>13/07/2022 às 12:35</time>
                     </header>
@@ -164,7 +164,7 @@
                     <a href="#" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
-                <img src="Downloads/3-curiosidades-sobre-a-Cirurgia-Robótica-que-talvez-você-não-conheça.png" alt="médicos fazendo cirurgia com apoio de robô">
+                <img src="imagens/robotica.jpg" alt="robô cirurgião">
                 <header>
                     <time>13/07/2022 às 12:35</time>
                 </header>
@@ -175,7 +175,7 @@
                 <a href="#" title="Leia a notícia completa">Ler mais</a>
             </article>
             <article>
-                <img src="Downloads/inteligencia-artificial.jpg" alt="ilustração de conexões neurais">
+                <img src="imagens/ia.jpg" alt="ilustração de conexões neurais">
                 <header>
                     <time>13/07/2022 às 12:35</time>
                 </header>
